syntax = "proto3";

package importclash.v1;

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/v2/protoc/pkg/test_capabilities/importclash";

import "tools/generator/v1alpha/cre_metadata.proto";
import "p1/pb/import.proto";
import "p2/pb/import.proto";

service BasicAction {
  option (tools.generator.v1alpha.capability) = {
    mode: MODE_DON
    capability_id: "import-clash@1.0.0"
  };
  rpc PerformAction (importclash.p1.v1.Inputs) returns (importclash.p2.v1.Outputs);
}
